[Fix] Alignment

--- a/src/sass/components/_footer.sass
+++ b/src/sass/components/_footer.sass
@@ -47,7 +47,7 @@
         background-color: #474747
         margin: 24px 0
 
-    &__logo
+    &__locale
         margin-top: -2px
         font-family: 'Righteous', cursive
         font-size: 24px
@@ -58,6 +58,8 @@
         background: none
         appearance: none
         text-align: right
+        text-align-last: right
+        direction: rtl
     
     &__about-nw
         float: left
